# completed-runs-validator

./: .gitignore  AGENTS.md  README.md  opencode.json  pyproject.toml
.claude/commands/: sync-remote-dbs.md
app/: auth.py  config.py  db.py  main.py  routes.py  schema.sql
app/services/: image_cache.py  s3_index.py  sheet_writeback.py  sheets.py  sync.py  validations.py
app/static/: app.css  app.js  review.css  review.js
app/templates/: index.html  login.html  reports.html  review.html
scripts/: backfill_sheet_metadata.py  generate_manifests.py  merge_remote_dbs.py  repair_missing_cache.py  start_validator_tmux.sh  sync_runs.py
tests/: test_config.py  test_db_retry.py  test_image_cache_no_lock_during_network.py  test_routes_e2e.py  test_s3_index.py  test_sheet_coordination.py  test_sheet_writeback.py  test_submit_caching_concurrency.py  test_write_conn_locking.py
